assets/sass/dark-mode.css
@mixin mode($mode: light, $class: "") {
    // Palette
    $orange:                  #f14e32;
    $blue:                    #009099;
    $font-color:              #4e443c;
    $light-font-color:        #9a9994;
    $link-color:              #0388a6;
    $fixed-width-font-color:  #4e443c;
    $base-border-color:       #d8d7cf;
    $callout-color:           #e9e8e0;
    $black-3:                 #333333;
    $main-bg:                 #fcfcfa;

    @if $mode == dark {
        $orange:                  #d1432a;
        $blue:                    #007a7e;
        $font-color:              #efefefbf;
        $light-font-color:        #7a7972;
        $link-color:              #579cab;
        $fixed-width-font-color:  #3c3632;
        $base-border-color:       #b3b2a7;
        $callout-color:           #555555;
        $black-3:                 #cccccc;
        $main-bg:                 #444444;

        body#{$class}::before {
            background-image: url("/images/bg/body.jpg");
            position: absolute;
            content: "";
            width: 100%;
            height: 200%;
            filter: brightness(.4) contrast(1.6);
            z-index: -1;
        }
        body#{$class} {
            background: transparent #000000;
            div#masthead {
                background: transparent;
            }
            div#masthead::before {
                content: "";
                width: 100%;
                height: 295px;
                background: url("/images/bg/isometric-grid.png") top right repeat;
                position: absolute;
                filter: brightness(.4) contrast(1.6);
                background-size: 35px 21px;
                z-index: -1;
            }
            div.monitor {
                filter: brightness(.7) contrast(1.2);
            }
            img {
                filter: brightness(.6) contrast(1.2);
            }
            a {
                color: #579cab;
            }
            a.subtle-button {
                background-image: linear-gradient(#555555, #777777);
                border-top: solid 1px #333333;
                border-right: solid 1px #333333;
                border-bottom: solid 1px #333333;
                border-left: solid 1px #333333;
                @include box-shadow(none);
            }
        }
        body#{$class}#documentation #main div.verseblock pre.content {
            background-color: #bb9a60;
        }
}

    body#{$class} {
        --orange:                       #{$orange};
        --orange-darker-5:              #{darken($orange, 5%)};
        --blue:                         #{$blue};
        --font-color:                   #{$font-color};
        --font-color-lighter-20:        #{lighten($font-color, 20%)};
        --light-font-color:             #{$light-font-color};
        --light-font-color-darker-10:   #{darken($light-font-color, 10%)};
        --light-font-color-darker-25:   #{darken($light-font-color, 25%)};
        --light-font-color-darker-35:   #{darken($light-font-color, 35%)};
        --light-font-color-darker-55:   #{darken($light-font-color, 55%)};
        --light-font-color-lighter-20:  #{lighten($light-font-color, 20%)};
        --link-color:                   #{$link-color};
        --link-hover-color:             #{lighten($link-color, 10%)};
        --fixed-width-font-color:       #{$fixed-width-font-color};
        --base-border-color:            #{$base-border-color};
        --base-border-color-darker-8:   #{darken($base-border-color, 8%)};
        --base-border-color-lighter-10: #{lighten($base-border-color, 10%)};
        --callout-color:                #{$callout-color};

        --black-3:                      #{$black-3};
        --main-bg:                      #{$main-bg};
    }
}

@include mode
@include mode($mode: dark, $class: ".dark-mode")

@media screen and (prefers-color-scheme: dark) {
    @include mode($mode: dark)
    @include mode($mode: light, $class: ".light-mode")
}

#dark-mode-button {
    position: absolute;
    top: 10px;
    right: 305px;
}

